# VisionEdge-Real-Time-Gaze-Interface

./: .gitignore  CMakeLists.txt  INDEX.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  START_HERE.md  create_onnx_model.py  demo_python.py  export_model_simple.py  gaze_model.onnx  gaze_tracker_calibrated.py  main.cpp  requirements.txt  run_demo.bat  setup.bat  test_components.py  train_gaze_model.py
